--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,46 +1,42 @@
-name: Java CI with Gradle.
+name: build
 
-on: [ push, pull_request ]
+on: [push,pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: gradle/wrapper-validation-action@v1
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          min-wrapper-count: 1
-          allow-snapshots: false
+          java-version: 1.8
 
-      - name: Set up JDK 8.
-        uses: actions/setup-java@v2
-
+      - name: Cache Gradle packages
+        uses: actions/cache@v2
         with:
-          java-version: 8
-          distribution: adopt-openj9
-          java-package: jdk
-          architecture: x64
-          check-latest: false
-          server-id: github
-          server-username: GITHUB_ACTOR
-          server-password: GITHUB_TOKEN
-          overwrite-settings: true
-          job-status: success
-
-      - name: Grant execute permission for gradlew.
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*','**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - uses: gradle/gradle-build-action@v2
-        with:
-          arguments:  setupDecompWorkspace 
-                      build --no-daemon
+      - name: Decomp Workspace
+        run: ./gradlew setupDecompWorkspace
+
+      - name: Build
+        run: ./gradlew build
 
       - uses: actions/upload-artifact@v2
         with:
-          name: package
-          path: build/libs/
-          if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`.
-          retention-days: 30 # The retention period must be between 1 and 90 inclusive.
-        env:
-          JAVA_HOME: /opt/hostedtoolcache/Java_Adopt-OpenJ9_jdk/8.0.312-7/x64
-          GRADLE_BUILD_ACTION_CACHE_RESTORED: true
+          name: Package
+          path: build/libs/*.jar
+
+      - name: Cleanup Gradle Cache
+        run: |
+          rm -rf ~/.gradle/caches/modules-2/modules-2.lock
+          rm -rf ~/.gradle/caches/modules-2/gc.properties
